# easy-simd

./: LICENSE  README.md  build.sh  meson.build
easysimd/: check.h  debug-trap.h  easysimd-align.h  easysimd-arch.h  easysimd-common.h  easysimd-complex.h  easysimd-constify.h  easysimd-detect-clang.h  easysimd-diagnostic.h  easysimd-f16.h  easysimd-features.h  easysimd-math.h  easysimd.h  hedley.h
easysimd/arm/: neon.h  sve.h
easysimd/arm/neon/: aba.h  abd.h  abdl.h  abs.h  add.h  addhn.h  addl.h  addl_high.h  addlv.h  addv.h  addw.h  addw_high.h  and.h  bcax.h  bic.h  bsl.h  cage.h  cagt.h  ceq.h  ceqz.h  cge.h  cgez.h  cgt.h  cgtz.h  cle.h  clez.h  cls.h  clt.h  cltz.h  clz.h  cmla.h  cmla_rot180.h  cmla_rot270.h  cmla_rot90.h  cnt.h  combine.h  create.h  cvt.h  dot.h  dot_lane.h  (+138 more)
easysimd/arm/sve/: add.h  and.h  cmplt.h  cnt.h  div.h  dup.h  extend.h  ld1.h  leftshift.h  mul.h  ptest.h  ptrue.h  qadd.h  reinterpret.h  sel.h  st1.h  sub.h  types.h  whilelt.h
easysimd/x86/: avx.h  avx2.h  avx512.h  clmul.h  f16c.h  fma.h  gfni.h  mmx.h  sse.h  sse2.h  sse3.h  sse4.1.h  sse4.2.h  ssse3.h  svml.h  xop.h
easysimd/x86/avx512/: 2intersect.h  4dpwssd.h  4dpwssds.h  abs.h  add.h  adds.h  alignr.h  and.h  andnot.h  avg.h  bitshuffle.h  blend.h  broadcast.h  cast.h  cmp.h  cmpeq.h  cmpge.h  cmpgt.h  cmple.h  cmplt.h  cmpneq.h  compress.h  conflict.h  copysign.h  cvt.h  cvts.h  cvtt.h  dbsad.h  div.h  dpbf16.h  dpbusd.h  dpbusds.h  dpwssd.h  dpwssds.h  expand.h  extract.h  fixupimm.h  fixupimm_round.h  flushsubnormal.h  fmadd.h  (+75 more)
example/: Makefile  add.c
rpm/: t-ptg-easysimd-devel.spec
test/: declare-suites.h  meson.build  native-aliases.sh  run-tests.c  run-tests.h  test.h
test/arm/: declare-suites.h  run-tests.c  run-tests.h
test/arm/neon/: aba.c  abd.c  abdl.c  abs.c  add.c  addhn.c  addl.c  addl_high.c  addlv.c  addv.c  addw.c  addw_high.c  and.c  bcax.c  bic.c  bsl.c  cage.c  cagt.c  ceq.c  ceqz.c  cge.c  cgez.c  cgt.c  cgtz.c  cle.c  clez.c  cls.c  clt.c  cltz.c  clz.c  cmla.c  cmla_rot180.c  cmla_rot270.c  cmla_rot90.c  cnt.c  combine.c  create.c  cvt.c  dot.c  dot_lane.c  (+143 more)
test/arm/sve/: add.c  and.c  cmplt.c  dup.c  meson.build  qadd.c  run-tests-neon.h  run-tests.c  run-tests.h  sel.c  sub.c  test-sve-footer.h  test-sve.h
test/common/: common.c  meson.build
test/x86/: avx.c  avx2.c  clmul.c  f16c.c  fma.c  gfni.c  meson.build  mmx.c  run-tests.c  run-tests.h  skel.c  sse.c  sse2.c  sse3.c  sse4.1.c  sse4.2.c  ssse3.c  svml.c  test-avx.h  test-mmx.h  test-sse.h  test-sse2.h  test-x86-footer.h  test-x86.h  xop.c
test/x86/avx512/: 2intersect.c  4dpwssd.c  4dpwssds.c  abs.c  add.c  adds.c  alignr.c  and.c  andnot.c  avg.c  bitshuffle.c  blend.c  broadcast.c  cast.c  cmp.c  cmpeq.c  cmpge.c  cmpgt.c  cmple.c  cmplt.c  cmpneq.c  compress.c  conflict.c  copysign.c  cvt.c  cvts.c  cvtt.c  dbsad.c  div.c  dpbf16.c  dpbusd.c  dpbusds.c  dpwssd.c  dpwssds.c  expand.c  extract.c  fixupimm.c  fixupimm_round.c  flushsubnormal.c  fmadd.c  (+80 more)
