project('EASYSIMD', 'c', 'cpp',
        license: 'MIT',
        meson_version : '>=0.54.0',
        version: '1.0.4',)
# also update EASYSIMD_VESION_* in easysimd/easysimd-common.h

cc = meson.get_compiler('c')
cxx = meson.get_compiler('cpp')

easysimd_neon_families = [
  'aba',
  'abd',
  'abdl',
  'abs',
  'add',
  'addhn',
  'addl',
  'addlv',
  'addl_high',
  'addv',
  'addw',
  'addw_high',
  'and',
  'bcax',
  'bic',
  'bsl',
  'cage',
  'cagt',
  'ceq',
  'ceqz',
  'cge',
  'cgez',
  'cgt',
  'cgtz',
  'cle',
  'cls',
  'clez',
  'clt',
  'cltz',
  'clz',
  'cmla',
  'cmla_rot90',
  'cmla_rot180',
  'cmla_rot270',
  'cnt',
  'cvt',
  'combine',
  'create',
  'dot',
  'dot_lane',
  'dup_n',
  'dup_lane',
  'eor',
  'ext',
  'fma',
  'fma_lane',
  'fma_n',
  'get_high',
  'get_lane',
  'get_low',
  'hadd',
  'hsub',
  'ld1',
  'ld1_dup',
  'ld1_lane',
  'ld2',
  'ld3',
  'ld4',
  'ld4_lane',
  'max',
  'maxnm',
  'maxv',
  'min',
  'minnm',
  'minv',
  'mla',
  'mla_n',
  'mlal',
  'mlal_high',
  'mlal_high_n',
  'mlal_lane',
  'mlal_n',
  'mls',
  'mls_n',
  'mlsl',
  'mlsl_high',
  'mlsl_high_n',
  'mlsl_lane',
  'mlsl_n',
  'movl',
  'movl_high',
  'movn',
  'movn_high',
  'mul',
  'mul_lane',
  'mul_n',
  'mull',
  'mull_high',
  'mull_lane',
  'mull_n',
  'mvn',
  'neg',
  'orn',
  'orr',
  'padal',
  'padd',
  'paddl',
  'pmax',
  'pmin',
  'qadd',
  'qabs',
  'qdmulh',
  'qdmulh_lane',
  'qdmulh_n',
  'qdmull',
  'qrdmulh',
  'qrdmulh_lane',
  'qrdmulh_n',
  'qrshrn_n',
  'qrshrun_n',
  'qmovn',
  'qmovn_high',
  'qmovun',
  'qneg',
  'qshl',
  'qshlu_n',
  'qshrn_n',
  'qshrun_n',
  'qsub',
  'qtbl',
  'qtbx',
  'rbit',
  'recpe',
  'recps',
  'reinterpret',
  'rev16',
  'rev32',
  'rev64',
  'rhadd',
  'rnd',
  'rndi',
  'rndm',
  'rndn',
  'rndp',
  'rshl',
  'rshr_n',
  'rshrn_n',
  'rsqrte',
  'rsqrts',
  'rsra_n',
  'set_lane',
  'shl',
  'shl_n',
  'shll_n',
  'shr_n',
  'shrn_n',
  'sqadd',
  'sra_n',
  'sri_n',
  'st1',
  'st1_lane',
  'st2',
  'st2_lane',
  'st3',
  'st3_lane',
  'st4',
  'st4_lane',
  'sub',
  'subhn',
  'subl',
  'subl_high',
  'subw',
  'subw_high',
  'tbl',
  'tbx',
  'trn1',
  'trn2',
  'trn',
  'tst',
  'uqadd',
  'uzp1',
  'uzp2',
  'uzp',
  'xar',
  'zip1',
  'zip2',
  'zip',
]

easysimd_sve_families = [
  'add',
  'and',
  'cnt',
  'cmplt',
  'dup',
  'ld1',
  'ptest',
  'ptrue',
  'qadd',
  'sel',
  'st1',
  'sub',
  'reinterpret',
  'whilelt'
]

easysimd_avx512_families = [
  '2intersect',
  '4dpwssd',
  '4dpwssds',
  'abs',
  'add',
  'adds',
  'alignr',
  'and',
  'andnot',
  'avg',
  'bitshuffle',
  'blend',
  'broadcast',
  'cast',
  'cmp',
  'cmpeq',
  'cmpge',
  'cmpgt',
  'cmple',
  'cmplt',
  'cmpneq',
  'compress',
  'conflict',
  'copysign',
  'cvt',
  'cvtt',
  'cvts',
  'dbsad',
  'div',
  'dpbf16',
  'dpbusd',
  'dpbusds',
  'dpwssd',
  'dpwssds',
  'expand',
  'extract',
  'fixupimm',
  'fixupimm_round',
  'flushsubnormal',
  'fmadd',
  'fmsub',
  'fnmadd',
  'fnmsub',
  'gather',
  'insert',
  'kshift',
  'load',
  'loadu',
  'lzcnt',
  'madd',
  'maddubs',
  'max',
  'min',
  'mov',
  'movedup',
  'mov_mask',
  'movm',
  'mul',
  'mulhi',
  'mulhrs',
  'mullo',
  'multishift',
  'negate',
  'or',
  'packs',
  'packus',
  'permutexvar',
  'permutex2var',
  'popcnt',
  'range',
  'range_round',
  'rcp',
  'reduce',
  'rol',
  'rolv',
  'ror',
  'rorv',
  'round',
  'roundscale',
  'roundscale_round',
  'sad',
  'scalef',
  'set',
  'set1',
  'set4',
  'setr',
  'setr4',
  'setzero',
  'setone',
  'shldi',
  'shldv',
  'shrdv',
  'shuffle',
  'sll',
  'slli',
  'sllv',
  'sqrt',
  'sra',
  'srai',
  'srav',
  'srl',
  'srli',
  'srlv',
  'store',
  'storeu',
  'sub',
  'subs',
  'ternarylogic',
  'test',
  'testn',
  'unpacklo',
  'unpackhi',
  'xor',
  'xorsign',
]

easysimd_msa_families = [
  'add_a',
  'adds',
  'adds_a',
  'addv',
  'addvi',
  'and',
  'andi',
  'ld',
  'madd',
  'st',
  'subv',
]

if not meson.is_subproject() and get_option('tests')
  subdir('test')
endif

easysimd_neon_family_headers = ['easysimd/arm/neon/types.h']
foreach neon_family : easysimd_neon_families
  easysimd_neon_family_headers += 'easysimd/arm/neon/' + neon_family + '.h'
endforeach

easysimd_sve_family_headers = ['easysimd/arm/sve/types.h']
foreach sve_family : easysimd_sve_families
  easysimd_sve_family_headers += 'easysimd/arm/sve/' + sve_family + '.h'
endforeach

easysimd_avx512_family_headers = ['easysimd/x86/avx512/types.h']
foreach avx512_family : easysimd_avx512_families
  easysimd_avx512_family_headers += 'easysimd/x86/avx512/' + avx512_family + '.h'
endforeach

easysimd_msa_family_headers = ['easysimd/mips/msa/types.h']
foreach msa_family : easysimd_msa_families
  easysimd_msa_family_headers += 'easysimd/mips/msa/' + msa_family + '.h'
endforeach

if not meson.is_subproject()
  install_headers(
    files([
      'easysimd/check.h',
      'easysimd/debug-trap.h',
      'easysimd/hedley.h',
      'easysimd/easysimd-align.h',
      'easysimd/easysimd-arch.h',
      'easysimd/easysimd-common.h',
      'easysimd/easysimd-constify.h',
      'easysimd/easysimd-detect-clang.h',
      'easysimd/easysimd-diagnostic.h',
      'easysimd/easysimd-f16.h',
      'easysimd/easysimd-features.h',
      'easysimd/easysimd-math.h',
      'easysimd/easysimd-complex.h',
      ]),
    subdir: 'easysimd')

  install_headers(
    files([
      'easysimd/x86/avx2.h',
      'easysimd/x86/avx.h',
      'easysimd/x86/clmul.h',
      'easysimd/x86/fma.h',
      'easysimd/x86/f16c.h',
      'easysimd/x86/gfni.h',
      'easysimd/x86/mmx.h',
      'easysimd/x86/sse2.h',
      'easysimd/x86/sse3.h',
      'easysimd/x86/sse4.1.h',
      'easysimd/x86/sse4.2.h',
      'easysimd/x86/sse.h',
      'easysimd/x86/ssse3.h',
      'easysimd/x86/svml.h',
      'easysimd/x86/xop.h',
      ]),
    subdir: 'easysimd/x86')

  install_headers(
    files(easysimd_avx512_family_headers),
    subdir: 'easysimd/x86/avx512')

  install_headers(
    files([
      'easysimd/arm/neon.h',
      'easysimd/arm/sve.h',
      ]),
    subdir: 'easysimd/arm')

  install_headers(
    files(easysimd_neon_family_headers),
    subdir: 'easysimd/arm/neon')

  install_headers(
    files(easysimd_sve_family_headers),
    subdir: 'easysimd/arm/sve')

  import('pkgconfig').generate(
    version : meson.project_version(),
    name : 'SIMDe',
    filebase : 'easysimd',
    description : 'Portable SIMD wrapper library')
endif

easysimd_dep = declare_dependency(
  include_directories : include_directories('.'),
  version : meson.project_version())
